Fix more small display bugs (found with real data)
## Problem:

- Long names in the header throw off the header layout
- wide pictures throw off the layout of search results
- long names throw off the layout of search results

## Solution:

- Make long names fade into ellipsis in the header
- cut off long names in the search results
- limit picture width in search results

--- a/app/assets/stylesheets/_header.scss
+++ b/app/assets/stylesheets/_header.scss
@@ -47,10 +47,19 @@
 
   .identity-name {
     margin-top: $header-height / 6;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
   }
 
   .header-title {
     display: inline-block;
+    width: 60%;
+  }
+
+  .header-title,
+  .header-actions {
+    height: $header-height;
   }
 
   .header-actions {
@@ -58,6 +67,7 @@
     position: relative;
     display: inline-block;
     float: right;
+    width: 40%;
   }
 
   .menu-collapsed {
