--- a/app/assets/stylesheets/_search.scss
+++ b/app/assets/stylesheets/_search.scss
@@ -50,17 +50,10 @@
 .search-result {
   @include span-columns(4 of 4);
 
-  img {
-    max-width: 40%;
-
-    @include media($medium-screen-up) {
-      max-width: none;
-    }
-  }
-
   .search-result-labels {
-    width: 50%;
+    width: 55%;
     float: right;
+    overflow: hidden;
 
     @include media($medium-screen-up) {
       width: auto;
@@ -90,7 +83,7 @@
     border: $dark-border;
     height: 6em;
     margin: 0;
-    max-width: 100%;
+    max-width: 40%;
 
     @include media($medium-screen-up) {
       display: block;
@@ -98,6 +91,7 @@
       margin-bottom: $small-spacing;
       margin-left: auto;
       margin-right: auto;
+      max-width: none;
     }
   }
 
